--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
+body {
+  background-color: #b2d9ea;
+}
+
 .App {
-  text-align: center;
+  background-color: #619196;
+  min-height: 500px;
+  width: 400px;
+  margin: 40px auto;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  border-radius: 10px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1 {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: URW Chancery L;
+  font-style: italic;
+  font-size: 40px;
+  color: #fff;
+  margin-top: 25px;
 }
 
-.App-link {
-  color: #61dafb;
+.p {
+  display: flex;
+  justify-content: center;
+  font-family: URW Chancery L;
+  font-style: italic;
+  font-size: 30px;
+  color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#todo-form .inputbox {
+  background-color: #dfc7c1;
+  border: 0;
+  width: 200px;
+  height: 50px;
+  padding: 0 20px;
+  margin: 20px;
+  font-size: 18px;
+  border-radius: 10px;
+  color: #222222;
+}
+
+#todo-form input::placeholder {
+  color: #dfc7c1;
+}
+
+/* #todo-form input:focus,
+#todo-form button:focus {
+  outline: none;
+} */
+
+#todo-form .Add {
+  background-color: #dfc7c1;
+  border: 0;
+  width: 80px;
+  height: 50px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bolder;
+  color: #222222;
+}
+
+#todo-form .X {
+  width: 30px;
+  height: auto;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  position: absolute;
+  right: 10px;
+}
+
+.list {
+  color: #222222;
+  width: auto;
+  height: 50px;
+  margin: 20px auto;
+  border-radius: 5px;
+  background-color: #dfc7c1;
+  margin: 10px 20px;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  position: relative;
+  padding-left: 11px;
+}
+
+.checkbox {
+  margin-right: 10px;
 }
